Updated UI Templates For Login, Dashboard, Schedule and View Timetable